--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
         <form class="form-inline my-2 my-lg-0 nav-form">
             <label>
-                <select class="form-control white-inputs" name="regione" id="regione">
+                <select class="form-control form-custom white-inputs" name="regione" id="regione">
                     <option value="0">Tutta Italia</option>
                     <option value="1">Lombardia</option>
                     <option value="2">Sardegna</option>
                 </select>
             </label>
             <label>
-                <select class="form-control white-inputs" name="provincia" id="provincia">
+                <select class="form-control form-custom white-inputs" name="provincia" id="provincia">
                     <option value="0">Ogni provincia</option>
                     <option value="1">Ogni provincia</option>
                     <option value="1">Lecco</option>
@@ -38,7 +38,7 @@
                 </select>
             </label>
             <div class="nav-newline"></div>
-            <input class="form-control mr-sm-2 white-inputs nav-search" type="search" placeholder="Cerca" aria-label="Search">
+            <input class="form-control form-custom mr-sm-2 white-inputs nav-search" type="search" placeholder="Cerca" aria-label="Search">
             <button class="btn btn-outline-success btn-custom my-2 my-sm-0" type="submit">Cerca</button>
         </form>
 
@@ -93,18 +93,18 @@
                 <div class="modal-body">
                     <form class="form my-2 my-lg-0 nav-form">
                         <p>Cosa cerchi?</p>
-                        <input class="form-control mr-sm-2 popup" type="search"
+                        <input class="form-control form-custom mr-sm-2 popup" type="search"
                                placeholder="Frullatore, Smart Tv, Aspirapolvere" aria-label="Search">
                         <p>Dove lo cerchi?</p>
                         <label class="popup">
-                            <select class="form-control" name="regione1" id="regione1">
+                            <select class="form-control form-custom" name="regione1" id="regione1">
                                 <option value="0">Tutta Italia</option>
                                 <option value="1">Lombardia</option>
                                 <option value="2">Sardegna</option>
                             </select>
                         </label>
                         <label class="popup">
-                            <select class="form-control" name="provincia1" id="provincia1">
+                            <select class="form-control form-custom" name="provincia1" id="provincia1">
                                 <option value="0">Ogni provincia</option>
                                 <option value="1">Ogni provincia</option>
                                 <option value="1">Lecco</option>
@@ -145,18 +145,18 @@
                 <div class="modal-body">
                     <form class="form my-2 my-lg-0 nav-form">
                         <p>Cosa cerchi?</p>
-                        <input class="form-control mr-sm-2 popup" type="search"
+                        <input class="form-control form-custom mr-sm-2 popup" type="search"
                                placeholder="Reflex, Treppiede, Registratore" aria-label="Search">
                         <p>Dove lo cerchi?</p>
                         <label class="popup">
-                            <select class="form-control" name="regione2" id="regione2">
+                            <select class="form-control form-custom" name="regione2" id="regione2">
                                 <option value="0">Tutta Italia</option>
                                 <option value="1">Lombardia</option>
                                 <option value="2">Sardegna</option>
                             </select>
                         </label>
                         <label class="popup">
-                            <select class="form-control" name="provincia2" id="provincia2">
+                            <select class="form-control form-custom" name="provincia2" id="provincia2">
                                 <option value="0">Ogni provincia</option>
                                 <option value="1">Ogni provincia</option>
                                 <option value="1">Lecco</option>
@@ -197,18 +197,18 @@
                 <div class="modal-body">
                     <form class="form my-2 my-lg-0 nav-form">
                         <p>Cosa cerchi?</p>
-                        <input class="form-control mr-sm-2 popup" type="search"
+                        <input class="form-control form-custom mr-sm-2 popup" type="search"
                                placeholder="Sciarpa, Scarpe, Borsa" aria-label="Search">
                         <p>Dove lo cerchi?</p>
                         <label class="popup">
-                            <select class="form-control" name="regione3" id="regione3">
+                            <select class="form-control form-custom" name="regione3" id="regione3">
                                 <option value="0">Tutta Italia</option>
                                 <option value="1">Lombardia</option>
                                 <option value="2">Sardegna</option>
                             </select>
                         </label>
                         <label class="popup">
-                            <select class="form-control" name="provincia3" id="provincia3">
+                            <select class="form-control form-custom" name="provincia3" id="provincia3">
                                 <option value="0">Ogni provincia</option>
                                 <option value="1">Ogni provincia</option>
                                 <option value="1">Lecco</option>
@@ -250,18 +250,18 @@
                 <div class="modal-body">
                     <form class="form my-2 my-lg-0 nav-form">
                         <p>Cosa cerchi?</p>
-                        <input class="form-control mr-sm-2 popup" type="search"
+                        <input class="form-control form-custom mr-sm-2 popup" type="search"
                                placeholder="Cuffie, Chitarra, Racchettoni" aria-label="Search">
                         <p>Dove lo cerchi?</p>
                         <label class="popup">
-                            <select class="form-control" name="regione4" id="regione4">
+                            <select class="form-control form-custom" name="regione4" id="regione4">
                                 <option value="0">Tutta Italia</option>
                                 <option value="1">Lombardia</option>
                                 <option value="2">Sardegna</option>
                             </select>
                         </label>
                         <label class="popup">
-                            <select class="form-control" name="provincia4" id="provincia4">
+                            <select class="form-control form-custom" name="provincia4" id="provincia4">
                                 <option value="0">Ogni provincia</option>
                                 <option value="1">Ogni provincia</option>
                                 <option value="1">Lecco</option>
