--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="watched.html">
                     <img src="img/binocolo.svg" class="nav-icon" alt="Annunci osservati">
                     <p class="nav-icon-text nav-link">Annunci osservati</p>
                 </a>
@@ -419,10 +419,10 @@
 
                 <ul class="list-unstyled">
                     <li>
-                        <a class="link-footer" href="https://github.com/lynerist">Leonardo Albani</a> | <a class="link-footer" href="mailto:leonardo.albani@studenti.unimi.it">leonardo.albani@studenti.unimi.it</a>
+                        <a class="link-footer" href="https://github.com/lynerist" target="_blank">Leonardo Albani</a> | <a class="link-footer" href="mailto:leonardo.albani@studenti.unimi.it">leonardo.albani@studenti.unimi.it</a>
                     </li>
                     <li>
-                        <a class="link-footer" href="https://github.com/FilippoUslenghi">Filippo Uslenghi</a> | <a class="link-footer" href="mailto:filippo.uslenghi@studenti.unimi.it">filippo.uslenghi@studenti.unimi.it</a>
+                        <a class="link-footer" href="https://github.com/FilippoUslenghi" target="_blank">Filippo Uslenghi</a> | <a class="link-footer" href="mailto:filippo.uslenghi@studenti.unimi.it">filippo.uslenghi@studenti.unimi.it</a>
                     </li>
                 </ul>
             </div>
