--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" type="text/css" href="css/products.css">
     <link rel="stylesheet" type="text/css" href="css/profile.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="stylesheet" type="text/css" href="css/posts.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -40,13 +41,13 @@
                 </select>
             </label>
             <div class="nav-newline"></div>
-            <input class="form-control form-custom mr-sm-2 white-inputs" type="search" placeholder="Cerca" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
+            <input class="form-control form-custom mr-sm-2 white-inputs nav-search" type="search" placeholder="Cerca" aria-label="Search">
+            <button class="btn btn-outline-success btn-custom my-2 my-sm-0" type="submit">Cerca</button>
         </form>
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="watched.html">
                     <img src="img/binocolo.svg" class="nav-icon" alt="Annunci osservati">
                     <p class="nav-icon-text nav-link">Annunci osservati</p>
                 </a>
@@ -224,6 +225,48 @@
             <div class="col-md-8">
                 <div class="tab-content profile-tab" id="myTabContent">
                     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <div class="container pb-5 mt-n2 mt-md-n3">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <!-- Item-->
+                                    <div class="d-sm-flex justify-content-between my-4 pb-4 border-bottom">
+                                        <div class="media d-block d-sm-flex text-center text-sm-left">
+                                            <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/lidl.jpeg" alt="Product" id="foto1"></a>
+                                            <div class="media-body pt-3">
+                                                <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo1"><a href="#" target="_blank">Calvin Klein Jeans Keds</a></h3>
+                                                <div class="font-size-sm" id="prodotto1"><span class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
+                                                <div class="font-size-sm" id="tempoUsura1"><span class="text-muted mr-2"><b>Nuovo</b></span></div>
+                                                <div class="font-size-lg text-primary pt-2" id="prezzo1">€125.00</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Item-->
+                                    <div class="d-sm-flex justify-content-between my-4 pb-4 border-bottom">
+                                        <div class="media d-block d-sm-flex text-center text-sm-left">
+                                            <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/image_not_found.png" alt="Product" id="foto2"></a>
+                                            <div class="media-body pt-3">
+                                                <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo2"><a href="#" target="_blank">Calvin Klein Jeans Keds</a></h3>
+                                                <div class="font-size-sm" id="prodotto2"><span class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
+                                                <div class="font-size-sm" id="tempoUsura2"><span class="text-muted mr-2"><b>Nuovo</b></span></div>
+                                                <div class="font-size-lg text-primary pt-2" id="prezzo2">€125.00</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Item-->
+                                    <div class="d-sm-flex justify-content-between my-4 pb-4 border-bottom">
+                                        <div class="media d-block d-sm-flex text-center text-sm-left">
+                                            <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/image_not_found.png" alt="Product" id="foto3"></a>
+                                            <div class="media-body pt-3">
+                                                <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo3"><a href="#" target="_blank">Calvin Klein Jeans Keds</a></h3>
+                                                <div class="font-size-sm" id="prodotto3"><span class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
+                                                <div class="font-size-sm" id="tempoUsura3"><span class="text-muted mr-2"><b>Nuovo</b></span></div>
+                                                <div class="font-size-lg text-primary pt-2" id="prezzo3">€125.00</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <nav class="pagination-wrapper pagination-box" aria-label="Esempio di navigazione con jump to page">
                             <ul class="pagination">
                                 <li class="page-item">
@@ -234,15 +277,13 @@
                                 </li>
                                 <li class="page-item"><a class="page-link" href="#">1</a></li>
                                 <li class="page-item"><span class="page-link">...</span></li>
-                                <li class="page-item"><a class="page-link" href="#">24</a></li>
+                                <li class="page-item sparisci-2"><a class="page-link sparisci-2" href="#">24</a></li>
                                 <li class="page-item sparisci"><a class="page-link sparisci" href="#">25</a></li>
                                 <li class="page-item active">
-                                    <a class="page-link" href="#" aria-current="page">
-                                        <span class="d-inline-block d-sm-none">Pagina </span>26
-                                    </a>
+                                    <a class="page-link" href="#" aria-current="page">26</a>
                                 </li>
                                 <li class="page-item sparisci"><a class="page-link sparisci" href="#">27</a></li>
-                                <li class="page-item"><a class="page-link" href="#">28</a></li>
+                                <li class="page-item sparisci-2"><a class="page-link sparisci-2" href="#">28</a></li>
                                 <li class="page-item"><span class="page-link">...</span></li>
                                 <li class="page-item"><a class="page-link" href="#">50</a></li>
                                 <li class="page-item">
@@ -253,61 +294,67 @@
                                 </li>
                             </ul>
                             <div class="form-group page-box">
-                                <label for="jumpToPage">
+                                <label for="jumpToPageAnnunciAcquistati">
                                     <span aria-hidden="true"></span>
-                                    <input type="text" class="form-control" id="jumpToPage" maxlength="3">
-                                    Vai a ...</span><span class="sr-only">Indica la pagina desiderata</span>
+                                    <input type="text" class="form-control" id="jumpToPageAnnunciAcquistati" maxlength="3">
+                                    Vai a ...<span class="sr-only">Indica la pagina desiderata</span>
                                 </label>
                             </div>
                         </nav>
                     </div>
                     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Experience</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Expert</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Hourly Rate</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>10$/hr</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Total Projects</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>230</p>
+                        <div class="container pb-5 mt-n2 mt-md-n3">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <!-- Item-->
+                                    <div class="d-sm-flex justify-content-between my-4 pb-4 border-bottom">
+                                        <div class="media d-block d-sm-flex text-center text-sm-left">
+                                            <a class="cart-item-thumb mx-auto mr-sm-4" href="#" target="_blank"><img src="img/image_not_found.png" alt="Product" id="foto4"></a>
+                                            <div class="media-body pt-3">
+                                                <h3 class="product-card-title font-weight-semibold border-0 pb-0" id="titolo4"><a href="#" target="_blank">Calvin Klein Jeans Keds</a></h3>
+                                                <div class="font-size-sm" id="prodotto4"><span class="text-muted mr-2">Prodotto:</span>Pantaloni</div>
+                                                <div class="font-size-sm" id="tempoUsura4"><span class="text-muted mr-2"><b>Nuovo</b></span></div>
+                                                <div class="font-size-lg text-primary pt-2" id="prezzo4">€125.00</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>English Level</label>
+                        <nav class="pagination-wrapper pagination-box nav-padding" aria-label="Esempio di navigazione con jump to page">
+                            <ul class="pagination">
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-angle-left"></i>
+                                        <span class="sr-only">Pagina precedente</span>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><span class="page-link">...</span></li>
+                                <li class="page-item sparisci-2"><a class="page-link sparisci-2" href="#">7</a></li>
+                                <li class="page-item sparisci"><a class="page-link sparisci" href="#">8</a></li>
+                                <li class="page-item active">
+                                    <a class="page-link" href="#" aria-current="page">9</a>
+                                </li>
+                                <li class="page-item sparisci"><a class="page-link sparisci" href="#">10</a></li>
+                                <li class="page-item sparisci-2"><a class="page-link sparisci-2" href="#">11</a></li>
+                                <li class="page-item"><span class="page-link">...</span></li>
+                                <li class="page-item"><a class="page-link" href="#">50</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <span class="sr-only">Pagina successiva</span>
+                                        <i class="fas fa-angle-right"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="form-group page-box">
+                                <label for="jumpToPageAnnunciVenduti">
+                                    <span aria-hidden="true"></span>
+                                    <input type="text" class="form-control" id="jumpToPageAnnunciVenduti" maxlength="3">
+                                    Vai a ...<span class="sr-only">Indica la pagina desiderata</span>
+                                </label>
                             </div>
-                            <div class="col-md-6">
-                                <p>Expert</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Availability</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>6 months</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <label>Your Bio</label><br/>
-                                <p>Your detail description</p>
-                            </div>
-                        </div>
+                        </nav>
                     </div>
                 </div>
             </div>
